# diary-filler

./: .gitattributes  .gitignore  FIX_REPORT.md  LAUNCH_CHECKLIST.md  PROD_READY_AUDIT_REPORT.md  README.md  README_СБОРКА_И_ПРОДАЖА.md  RELEASE_NOTES.md  actions_creation.py  actions_creation_orchestrator.py  actions_diary_flow.py  actions_medical_flow.py  actions_mixin.py  actions_navigation.py  actions_reports.py  actions_selection.py  actions_template_checks.py  actions_ui_state.py  app.py  app_config.py  app_initialization.py  build_exe_windows.bat  diagnosis_widget.py  dialog_dates.py  dialog_document_details.py  dialog_expert.py  dialog_fields.py  dialog_fields_core.py  dialog_fields_linking.py  dialog_fields_popup.py  dialogs_mixin.py  diary_batch.py  diary_constants.py  diary_dates.py  diary_filler.py  diary_gender.py  diary_models.py  diary_paths.py  diary_table.py  diary_table_cells.py  (+103 more)
.github/workflows/: build-windows-exe.yml  windows-build.yml
src/: diary_filler.py  embedded_templates.py  icd10_f.py  main.py  medical_documents.py  printer_support.py  zapolnitel_dnevnikov_app.py
