[project]
name = "medical-diary-autofill"
version = "1.3.14"
description = "Local Windows DOCX medical document and diary autofill utility"
requires-python = ">=3.11,<3.14"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 140
extend-exclude = [
  "build",
  "dist",
  "test_run*",
  ".venv*",
]

[tool.ruff.lint]
# Release gate runs compile, smoke tests and prod_audit.py. Ruff remains focused on syntax/safety rules.
select = ["E9", "F63", "F7", "F82"]
